--- a/data/app.appdata.xml.in
+++ b/data/app.appdata.xml.in
@@ -62,6 +62,16 @@
     </screenshots>
 
     <releases>
+        <release version="3.9.1" date="2024-9-3">
+            <description translate="no">
+                <ul>
+                <li>Play the next album after end of an album.</li>
+                <li>Optimize UI layout, shrink the window.</li>
+                <li>Fix crash when open an album with invalid utf-8 name.</li>
+                <li>Update German translation: Ukrainian, Slovenian, German, Slovenian, Belarusian, Chinese.</li>
+                </ul>
+            </description>
+        </release>
         <release version="3.9" date="2024-8-25">
             <description translate="no">
                 <ul>
