replace Switcher with Gtk.StackSwitcher

--- a/src/meson.build
+++ b/src/meson.build
@@ -12,6 +12,7 @@ sources = [
   'ui/mini-bar.vala',
   'ui/music-list.vala',
   'ui/music-widgets.vala',
+  'ui/narrow-bar.vala',
   'ui/paintables.vala',
   'ui/peak-bar.vala',
   'ui/play-bar.vala',
@@ -19,7 +20,6 @@ sources = [
   'ui/preferences.vala',
   'ui/stable-label.vala',
   'ui/store-panel.vala',
-  'ui/switch-bar.vala',
   'ui/volume-button.vala',
   'ui/window.vala',
   'utils/async-task.vala',
