add playlist-dialog.ui to POT

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,6 +2,7 @@ data/app.desktop.in
 data/app.metainfo.xml.in
 src/gtk/help-overlay.ui
 src/gtk/play-panel.ui
+src/gtk/playlist-dialog.ui
 src/gtk/preferences.ui
 src/gtk/store-panel.ui
 src/action-handles.vala
