use new Adw.Dialog for dialogs

--- a/meson.build
+++ b/meson.build
@@ -17,16 +17,22 @@ add_project_arguments('-DGETTEXT_PACKAGE="' + meson.project_name() + '"', langua
 add_project_arguments('--enable-experimental-non-null', language: 'vala')
 
 gtk_dep = dependency('gtk4')
-if gtk_dep.version().version_compare('>=4.10.0') and vala_compiler.version().version_compare('>=0.56.6')
+if gtk_dep.version().version_compare('>=4.10') and vala_compiler.version().version_compare('>=0.56.6')
   add_project_arguments('--define=GTK_4_10', language: 'vala')
 endif
 
 adw_dep = dependency('libadwaita-1')
-if adw_dep.version().version_compare('>=1.2.0')
+if adw_dep.version().version_compare('>=1.2')
   add_project_arguments('--define=ADW_1_2', language: 'vala')
 endif
-if adw_dep.version().version_compare('>=1.4.0')
+if adw_dep.version().version_compare('>=1.4')
   add_project_arguments('--define=ADW_1_4', language: 'vala')
+endif
+if adw_dep.version().version_compare('>=1.5')
+  add_project_arguments('--define=ADW_1_5', language: 'vala')
+endif
+if adw_dep.version().version_compare('>=1.6')
+  add_project_arguments('--define=ADW_1_6', language: 'vala')
 endif
 
 libm_dep = c_compiler.find_library('m', required: false)
