split dialogs.vala into 3 files

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -12,8 +12,10 @@ src/ui/music-list.vala
 src/ui/music-widgets.vala
 src/ui/play-bar.vala
 src/ui/play-panel.vala
+src/ui/playlist-dialog.vala
 src/ui/preferences.vala
 src/ui/store-panel.vala
+src/ui/taglist-dialog.vala
 src/ui/volume-button.vala
 src/ui/window.vala
 src/utils/music.vala
