--- a/src/meson.build
+++ b/src/meson.build
@@ -18,9 +18,11 @@ sources = [
   'ui/peak-bar.vala',
   'ui/play-bar.vala',
   'ui/play-panel.vala',
+  'ui/playlist-dialog.vala',
   'ui/preferences.vala',
   'ui/stable-label.vala',
   'ui/store-panel.vala',
+  'ui/taglist-dialog.vala',
   'ui/volume-button.vala',
   'ui/window.vala',
   'utils/async-task.vala',
