--- a/meson.build
+++ b/meson.build
@@ -14,6 +14,7 @@ c_compiler = meson.get_compiler('c')
 vala_compiler = meson.get_compiler('vala')
 
 add_project_arguments('-DGETTEXT_PACKAGE="' + meson.project_name() + '"', language: 'c')
+add_project_arguments('-Wno-error=incompatible-function-pointer-types', language: 'c')
 add_project_arguments('--enable-experimental-non-null', language: 'vala')
 
 gtk_dep = dependency('gtk4')
