update string of desktop entry, fix incorrect string

--- a/data/app.desktop.in
+++ b/data/app.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Gapless
 GenericName=Music Player
-Comment=Play music
+Comment=Play your music elegantly
 Exec=g4music %U
 Icon=@app_id@
 Terminal=false
