--- a/data/app.metainfo.xml.in
+++ b/data/app.metainfo.xml.in
@@ -65,6 +65,15 @@
     </screenshots>
 
     <releases>
+        <release version="4.3.1" date="2025-2-15">
+            <description translate="no">
+                <ul>
+                <li>Remove unnecessary flatpak permissions.</li>
+                <li>Add Bulgarian translation</li>
+                <li>Update translation: Danish, Persian, Hebrew.</li>
+                </ul>
+            </description>
+        </release>
         <release version="4.3" date="2024-11-30">
             <description translate="no">
                 <ul>
